--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="logo">LOGO</h1>
+        <h1 class="logo"><a href="#">LOGO</a></h1>
         <nav class="nav-bar">
             <ul>
                 <li><a href="#">Home</a></li>
