--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto-site</title>
+    <title>Projet-sit</title>
 </head>
 <body>
     <header class="header">
@@ -20,7 +20,7 @@
     <main>
         <section>
             <header class="title">Título</header>
-            <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere commodi ipsam hic dolore, eligendi ad iusto, delectus natus minus aliquam quam, necessitatibus autem aliquid atque. Adipisci ipsum amet eligendi voluptas!</article>
+            <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere commodi ipsam hic dolore, eligendi ad iusto, delectus natus minus aliquam quam, necessitatibus autem aliquid atque. Adipisci ipsum amet eligendi voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio harum eveniet eligendi temporibus magni sit, aspernatur perferendis itaque praesentium aut incidunt vitae? Similique, voluptatum repellendus labore rerum distinctio inventore velit.</article>
         </section>
     </main>
 </body>
